--- a/pagina2.css
+++ b/pagina2.css
@@ -1,4 +1,4 @@
-/* 
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -27,4 +27,4 @@ footer {
     width: 100%;
     position: fixed;
     bottom: 0;
-} */
+}
