--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ header{
     text-align: center;
 }
 footer{
-    background-color: #ffffffbe;
+    background-color: #DDC2A9;
     padding: 4px;
     text-align: center;
 }
