--- a/pagina2.css
+++ b/pagina2.css
@@ -10,7 +10,6 @@ body {
 }
 header {
     background-color: #DDC2A9;
-    color: white;
     padding: 1em;
     text-align: center;
     width: 100%;
@@ -20,8 +19,7 @@ main {
     text-align: center;
 }
 footer {
-    background-color: #333;
-    color: white;
+    background-color: #DDC2A9;
     padding: 1em;
     text-align: center;
     width: 100%;
