--- a/pagina2.css
+++ b/pagina2.css
@@ -4,7 +4,9 @@ header {
     text-align: center;
     width: 100%;
 }
-h1
+h1 {
+    text-decoration: underline;
+}
 
 body {
     font-family: Arial, sans-serif;
