--- a/pagina2.css
+++ b/pagina2.css
@@ -9,8 +9,7 @@ h1 {
 }
 
 body {
-    margin: 0;
-    padding: 0;
+    margin: 8px;
     display: flex;
     flex-direction: column;
     align-items: center;
