--- a/pagina2.css
+++ b/pagina2.css
@@ -16,13 +16,14 @@ body {
     background-color: #f0f0f0;
 }
 main {
-    padding: 2em;
+    padding: 2px;
     text-align: center;
 }
 
 @media screen and (min-width: 1024px) {
     .intro{
     display: flex;
+}
 }
 
 footer {
