--- a/pagina2.css
+++ b/pagina2.css
@@ -19,6 +19,9 @@ main {
     padding: 2px;
     text-align: center;
 }
+.textobemlongo{
+    
+}
 
 @media screen and (min-width: 1024px) {
     .intro{
