--- a/pagina2.css
+++ b/pagina2.css
@@ -16,11 +16,8 @@ body {
     background-color: #f0f0f0;
 }
 main {
-    padding: 2px;
+    margin: 8px;
     text-align: center;
-}
-.textobemlongo{
-    
 }
 
 @media screen and (min-width: 1024px) {
