--- a/pagina2.css
+++ b/pagina2.css
@@ -18,9 +18,12 @@ main {
     margin: 8px;
     text-align: center;
 }
+.textobemlongo{
+    
+}
 
 @media screen and (min-width: 1024px) {
-    .intro{
+    .textobemlongo{
     display: flex;
 }
 }
