--- a/pagina2.css
+++ b/pagina2.css
@@ -19,7 +19,8 @@ main {
     text-align: center;
 }
 .textobemlongo{
-    
+    margin: 20px;
+    padding-left: 20px;
 }
 
 @media screen and (min-width: 1024px) {
